--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -115,8 +115,8 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            build
-            .ninja_log
+            ./vtk/build
+            ./vtk/build/.ninja_log
           key:  ${{ matrix.os }}-${{ matrix.python-version }}-ninja-${{ env.VTK_VERSION }}-
 
       - name: Compile from Scratch for Macos
@@ -153,15 +153,16 @@ jobs:
                 -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
                 -DCMAKE_BUILD_TYPE=Release \
                 ../VTK-9.2.6
-          ninja -j3
+          echo "XXX" > .ninja_log
+          # ninja -j3
 
       - name: Cache build folder
         id: cache-cpp
         uses: actions/cache/save@v4
         with:
           path: |
-            build
-            .ninja_log
+            ./vtk/build
+            ./vtk/build/.ninja_log
           key: ${{ steps.cache-build.outputs.cache-primary-key }}
             
       - name: Verify Library Architecture
