--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -101,12 +101,14 @@ jobs:
           key:  ${{ matrix.os }}-${{ matrix.python-version }}-ninja-${{ env.VTK_VERSION }}-
 
       - name: Download vtk
+        if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
           mkdir -p ./vtk/build
           wget -q https://www.vtk.org/files/release/${{ env.VTK_MINOR_VERSION}}/VTK-${{ env.VTK_VERSION }}.tar.gz  # Update this for newer releases of VTK
           tar -zxf VTK-${{ env.VTK_VERSION }}.tar.gz --directory ./vtk/
       
       - name: Verify Python lib path is correct for building VTK
+        if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
           echo "MACOSX_DEPLOYMENT_TARGET: $MACOSX_DEPLOYMENT_TARGET"
           echo "_PYTHON_HOST_PLATFORM: $_PYTHON_HOST_PLATFORM"
@@ -141,7 +143,6 @@ jobs:
           cmake -GNinja \
                 -DVTK_WHEEL_BUILD=ON \
                 -DVTK_WRAP_PYTHON=ON \
-                -DVTK_DIST_NAME_SUFFIX=cadquery \
                 -DVTK_VERSION_SUFFIX="" \
                 -DCMAKE_C_FLAGS="$CFLAGS" \
                 -DCMAKE_CXX_FLAGS="$CXXFLAGS" \
