--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -33,8 +33,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Python on other platforms than MacOS
-        uses: actions/setup-python@v5
         if: ${{ runner.os != 'macOS' }}
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.python_arch }}
@@ -66,12 +66,13 @@ jobs:
           echo "MACOSX_DEPLOYMENT_TARGET=11.0" >> $GITHUB_ENV
           echo "_PYTHON_HOST_PLATFORM=macosx-11.0-${{ matrix.arch }}" >> $GITHUB_ENV
 
-      - name: Verify Python
+      - name: Verify Python on MacOS
+        if: ${{ runner.os == 'macOS' }}
         run: |
           command -v python
           python --version
           python -c "import platform; print(f'Architecture: {platform.machine()}')"
-      
+            
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
@@ -192,6 +193,7 @@ jobs:
         run: |
           cd vtk\build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DVTK_VERSION_SUFFIX="" -DCMAKE_BUILD_TYPE=Release ../VTK-${{ env.VTK_VERSION }}
+          
           ninja -j4
 
       - name: Cache build folder
@@ -243,7 +245,7 @@ jobs:
 
           pip install vtk\build\dist\*.whl
           python -c "import vtk;print('vtk imported successfully')"
-                    
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
