--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -82,7 +82,8 @@ jobs:
       - name: Ubuntu Deps
         if: matrix.os == 'ubuntu-20.04'
         run: |
-          sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python-dev python-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
+          sudo apt-get update
+          sudo apt-get install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python-dev python-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
 
       - name: MacOS Deps
         if: startsWith(matrix.os, 'macos')
