--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -83,7 +83,7 @@ jobs:
         if: matrix.os == 'ubuntu-20.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python-dev python-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
+          sudo apt-get install -y build-essential mesa-common-dev mesa-utils freeglut3-dev python-dev git-core ninja-build cmake wget libglvnd0 libglvnd-dev
 
       - name: MacOS Deps
         if: startsWith(matrix.os, 'macos')
