--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -14,7 +14,12 @@ jobs:
     strategy:
       matrix:
         os: [ 'ubuntu-20.04', 'macos-13', 'macos-14', 'windows-2019' ]
-        python-version: [ '3.9', '3.10', '3.11', '3.12' ]
+        python-version:
+          - '3.9'
+          - '3.10'
+          - '3.11'
+          - '3.12'
+          - '3.13'
 
     steps:
       - name: Checkout project
