--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -16,7 +16,12 @@ jobs:
     strategy:
       matrix:
         os: [ 'ubuntu-22.04', 'macos-13', 'windows-2019' ]
-        python-version: [ '3.9', '3.10', '3.11', '3.12' ]
+        python-version:
+          - '3.9'
+          - '3.10'
+          - '3.11'
+          - '3.12'
+          - '3.13'
 
     steps:
 
