--- a/.github/workflows/local-build.yml
+++ b/.github/workflows/local-build.yml
@@ -16,7 +16,12 @@ jobs:
     strategy:
       matrix:
         os: [ 'macos-14' ]  # macos-arm64 only
-        python-version: [ '3.9', '3.10', '3.11', '3.12' ]
+        python-version:
+          - '3.9'
+          - '3.10'
+          - '3.11'
+          - '3.12'
+          - '3.13'
 
     steps:
       - name: Checkout project
