--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cadquery-ocp"
-version = "7.7.2"
+version = "7.7.2.2b1"
 description = "Unchanged OCP package, just pypi packaged"
 authors = [
     {name = "Bernhard Walter", email = "b_walter@arcor.de"},
